RESOLVED FIXED288234
[visionOS] Crash in com.apple.WebKit.GPU at AVFCore: -[AVSampleBufferVideoRenderer enqueueSampleBuffer:]
https://bugs.webkit.org/show_bug.cgi?id=288234
Summary [visionOS] Crash in com.apple.WebKit.GPU at AVFCore: -[AVSampleBufferVideoRe...
Jean-Yves Avenard [:jya]
Reported 2025-02-21 13:31:06 PST
ObjC exception in ``` Last Exception Backtrace: 0 CoreFoundation 0x189d13f6c __exceptionPreprocess + 164 (/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/ObjC.subproj/NSException.m:249) 1 libobjc.A.dylib 0x180c39e70 objc_exception_throw + 88 (/Library/Caches/com.apple.xbs/Sources/objc4/runtime/objc-exception.mm:356) 2 AVFCore 0x1a6187ac4 -[AVSampleBufferVideoRenderer enqueueSampleBuffer:] + 652 (/Library/Caches/com.apple.xbs/Sources/AVFoundation_AVFCore/Fig/AVSampleBufferVideoRenderer.m:1645) 3 WebCore 0x10b6914f0 WebCore::VideoMediaSampleRenderer::maybeQueueFrameForDisplay(CMTime const&, opaqueCMSampleBuffer*, int) + 612 4 WebCore 0x10b691ec8 WebCore::VideoMediaSampleRenderer::purgeDecodedSampleQueueAndDisplay(int) + 992 5 WebCore 0x10b68eac0 invocation function for block in WebCore::VideoMediaSampleRenderer::setTimebase(WTF::RetainPtr<OpaqueCMTimebase*>&&) + 112 6 libdispatch.dylib 0x26900b834 _dispatch_client_callout + 16 (/Library/Caches/com.apple.xbs/Sources/libdispatch/src/client_callout.mm:85) ```
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-02-21 13:31:26 PST
Jean-Yves Avenard [:jya]
Comment 2 2025-02-21 14:59:44 PST
EWS
Comment 3 2025-02-24 23:57:33 PST
Committed 291014@main (a074e7d15fa9): <https://commits.webkit.org/291014@main> Reviewed commits have been landed. Closing PR #41099 and removing active labels.
Karl Rackler
Comment 4 2025-02-25 06:21:46 PST
Reopened Bugzilla. This reverts because it broke the build on the bots., tracking revert in https://bugs.webkit.org/show_bug.cgi?id=288480.
Jean-Yves Avenard [:jya]
Comment 5 2025-02-25 08:55:47 PST
EWS
Comment 6 2025-02-25 13:20:01 PST
Committed 291046@main (e8ba0143ef25): <https://commits.webkit.org/291046@main> Reviewed commits have been landed. Closing PR #41293 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.